# rteb

./: pyproject.toml
rteb/: retrieve.py
rteb/core/: encoder.py  retriever.py
rteb/datasets/: text.py
