[project]
name = "rteb"
version = "2025.01.08"
description = "Retrieval Embedding Benchmark"
requires-python = ">=3.10"  # Because of NoneType
dependencies = [
    "numpy>=1.25",
    "lightning>=2.1.1",
    "beir>=1.0.1",
    "sentence-transformers>=3.0.0",
    "termcolor>=2.0.1",
    "faiss-cpu",
    "pydantic",
    "google-genai>=1.56.0",
    "vertexai>=1.71.1",
    "flagembedding>=1.3.5",
]

[project.urls]
Homepage = "https://github.com/embedding-benchmark/rteb"
Issues = "https://github.com/embedding-benchmark/rteb/issues"

[tool.setuptools]
packages = ["rteb"]
